# synz-ui

./: index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dma_bridge.rs  explorer_bridge.rs  lib.rs  vscode_bridge.rs
src/components/auth/: CreateAccountPage.tsx  Input.tsx  LoginPage.tsx
src/components/dashboard/: AccountPage.tsx  ClientManagerDialog.tsx  Dashboard.tsx  DetachedWindow.tsx  DragGhost.tsx  DropZoneOverlay.tsx  FloatingExecuteButton.tsx  QuickFilePicker.tsx  SettingsPage.tsx  Sidebar.tsx  SplitContainer.tsx  StatusBar.tsx  TabBar.tsx  TerminalPanel.tsx  WelcomePage.tsx
src/components/dashboard/Explorer/: ExplorerPanel.tsx  index.ts
src/components/layout/: TitleBar.tsx
src/components/shared/: Button.tsx  IconButton.tsx
src/config/: theme.ts
src/editor/: CodeEditor.tsx  index.ts  luauCompletions.ts  luauDiagnostics.ts  luauLanguage.ts  luauLsp.ts  luauNGram.ts
src/editor/completions/: ghostText.ts  robloxClasses.ts  scopeAnalyzer.ts  usageTracker.ts
src/hooks/: useAccentColor.ts  useKeybinds.ts  useLuauLsp.ts
src/services/: lspClient.ts  scriptbloxApi.ts
src/stores/: attachStore.ts  authStore.ts  clientManagerStore.ts  detachedWindowStore.ts  diagnosticStore.ts  editorNavigationStore.ts  explorerStore.ts  favoritesStore.ts  fileStore.ts  keybindsStore.ts  qolStore.ts  quickExecuteStore.ts  sessionStore.ts  settingsStore.ts  splitStore.ts  workspaceStore.ts
src/styles/: globals.css
(+9 files in other folders)
